Update indexers to use lifestage of specimen at experiment date; Deduplicate FER and VIA stats results